Test Org - Speridian/src/objects/BA_SubgroupClass_Package__c.object
<CustomObject>
    <fields>
        <fullName>ba_BenefitPackageID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Benefit Package</label>
        <referenceTo>BA_Asset__c</referenceTo>
        <relationshipLabel>Subgroup Class Packages</relationshipLabel>
        <relationshipName>Subgroup_Class_Packages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_ClassID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Class ID</label>
        <referenceTo>BA_Classes__c</referenceTo>
        <relationshipLabel>Subgroup Class Packages</relationshipLabel>
        <relationshipName>Subgroup_Class_Packages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_EffectiveDate__c</fullName>
        <label>Policy Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_RateEffectiveDate__c</fullName>
        <label>Rate Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_RateTerminationDate__c</fullName>
        <label>Rate Termination Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_TerminationDate__c</fullName>
        <label>Policy Termination Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Subgroup Class Package</label>
    <nameField>
        <label>Subgroup Class Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subgroup Class Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>